# realTimeProgramming

notes/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  markdown.md
project/: CardDetectionSM.c
project/Queues/: CMakeLists.txt  logger.c  sender.c
project/cardDetector/: CMakeLists.txt  NOT_HERE_card_validation_process.c  card_detector.c  card_detector.h  card_detector_heartbeat.c  card_detector_heartbeat.h  card_detector_signals.c  card_detector_signals.h  card_detector_sm.c  card_detector_sm.h  heartbeat_signals_handlers.c  heartbeat_signals_handlers.h  main.c  main_system.c  main_system_sm.c  subsystems.c  subsystems.h
project/cardDetector/basic_control_signals/: basic_control_signals.c  basic_control_signals.h
project/cardDetector/card_detector/: card_detector.c  card_detector.h  card_detector_sm.c  card_detector_sm.h  main.c
project/cardDetector/card_validator/: card_detected.c  card_detected.h  card_validation_thread_pool.c  card_validation_thread_pool.h  card_validator.c  card_validator.h  card_validator_sm.c  card_validator_sm.h  main.c
project/cardDetector/card_validator_shared_memory/: card_validator_shared_memory.c  card_validator_shared_memory.h
project/cardDetector/heartbeat/: heartbeat.c  heartbeat.h
project/signals/: CMakeLists.txt  forking.c  receiver.c  sender.c
